--- a/build.xml
+++ b/build.xml
@@ -53,7 +53,7 @@
  <target name="phploc" description="Measure project size using PHPLOC">
   <exec executable="phploc">
    <arg value="--log-csv" />
-   <arg value="${basedir}/build/logs/phploc.csv" />
+   <arg value="${basedir}/app/build/logs/phploc.csv" />
    <arg path="${basedir}/src" />
   </exec>
  </target>
